:sparkles: feat: 实现安全认证系统与登录登出功能
实现了安全认证和登录登出功能，同时也规定了响应格式和响应码

- 使用Spring Security库配置了基于JWT的安全认证系统，支持权限控制
- 采用refreshToken+accessToken方案，实现了登入登出操作，前端使用有效期短的accessToken请求资源，使用有效期长的refreshToken刷新accessToken
- 规定了后端响应格式，自定义了一套响应码，配合HTTP状态码提供更细化的自定义错误信息

Close issue #1

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,16 @@
 services:
+  mysql:
+    image: 'mysql:latest'
+    environment:
+      - 'MYSQL_INITDB_DATABASE=neuron'
+      - 'MYSQL_INITDB_PASSWORD=glgjss17yfhbqz'
+      - 'MYSQL_INITDB_USERNAME=root'
+    ports:
+      - '3306'
   mongodb:
     image: 'mongo:latest'
     environment:
-      - 'MONGO_INITDB_DATABASE=mydatabase'
+      - 'MONGO_INITDB_DATABASE=neuron'
       - 'MONGO_INITDB_ROOT_PASSWORD=secret'
       - 'MONGO_INITDB_ROOT_USERNAME=root'
     ports:
