:sparkles: 实现了注册功能
- 实现了注册用户功能
- 预留了修改密码和注销用户的服务层接口，但还没有提供 api
- 修改了项目结构，将PO/VO/BO/DTO对象统一置于 /entity 下

Close Issue #2

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
 server:
   port: 8080
+
 spring:
   application:
     name: neuron
@@ -29,3 +30,5 @@ jwt:
   # JWT 的开头
   tokenHead: 'Bearer '
 
+mybatis:
+  mapper-locations: classpath:mapper/*
