:recycle: refactor: 规范化了api
- 对 api 接口进行了规范化
- 将接口 url 写入配置文件中，在代码中导入 url, 而不是直接硬编码路径，这样便于维护

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,3 +32,14 @@ jwt:
 
 mybatis:
   mapper-locations: classpath:mapper/*
+
+api:
+  account:
+    login: '/api/account/login'
+    logout: '/api/account/logout'
+    register: '/api/account/register'
+  refresh:
+    access-token: '/api/refresh/access-token'
+    refresh-token: '/api/refresh/refresh-token'
+
+
